--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@
 
 <link rel="stylesheet" href="styles.css" type="text/css">
 
-<img src="images/lin.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left">
+<!-- <img src="images/lin.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left"> -->
 
 <!-- <table><tr><td bgcolor=orange>background：orange</td></tr></table> -->
 
@@ -11,7 +11,7 @@
 
 
 <font size="5"> 
-add sth from local
+
 
 
 Lin Xiong 
@@ -20,8 +20,7 @@ Lin Xiong
 
 </font>
 
-
-I am a fifth-year Ph.D. student of geophysics, working with Prof. G.W. Wang. I am looking for a job in academia now.
+upload my scripts
 
 <!--  ![R10 antenna](images/R10.JPG) -->
 
